--- a/default.config.yml
+++ b/default.config.yml
@@ -81,4 +81,87 @@ bind_zones:
           - "*.apps"
           - api
 
+# haproxy config
+
+haproxy_frontend:
+  - name: k8s-api
+    bind:
+      - listen: ':6443'
+    mode: tcp
+    option:
+      - dontlog-normal
+    default_backend: k8s-api-servers
+  - name: k8s-worker-http
+    bind:
+      - listen: ':80'
+    mode: tcp
+    option:
+      - dontlog-normal
+    default_backend: k8s-worker-http-servers
+  - name: k8s-worker-https
+    bind:
+      - listen: ':443'
+    mode: tcp
+    option:
+      - dontlog-normal
+    default_backend: k8s-worker-https-servers
+
+haproxy_backend:
+  - name: k8s-api-servers
+    mode: tcp
+    option:
+      - dontlog-normal
+    balance: source
+    server:
+      - name: k8s-master-00
+        listen: '10.0.0.10:6443'
+        param:
+          - check
+
+  - name: k8s-worker-http-servers
+    mode: tcp
+    option:
+      - dontlog-normal
+    balance: source
+    server:
+      - name: k8s-worker-00
+        listen: '10.0.0.20:80'
+        param:
+          - check
+      - name: k8s-worker-01
+        listen: '10.0.0.21:80'
+        param:
+          - check
+      - name: k8s-worker-02
+        listen: '10.0.0.22:80'
+        param:
+          - check
+      - name: k8s-worker-03
+        listen: '10.0.0.23:80'
+        param:
+          - check
+
+  - name: k8s-worker-https-servers
+    mode: tcp
+    option:
+      - dontlog-normal
+    balance: source
+    server:
+      - name: k8s-worker-00
+        listen: '10.0.0.20:443'
+        param:
+          - check
+      - name: k8s-worker-01
+        listen: '10.0.0.21:443'
+        param:
+          - check
+      - name: k8s-worker-02
+        listen: '10.0.0.22:443'
+        param:
+          - check
+      - name: k8s-worker-03
+        listen: '10.0.0.23:443'
+        param:
+          - check
+
 ...
