--- a/requirements.yml
+++ b/requirements.yml
@@ -1,14 +1,10 @@
 ---
 roles:
+  - name: bertvv.bind
+  - name: ckaserer.dhcp
   - name: ckaserer.dhcpcd
   - name: ckaserer.k3s_iptables
-
+#  - name: ckaserer.haproxy
+  
 collections: []
 ...
-
-# - name: ckaserer.authorized_keys
-# - name: ckaserer.dhcp
-# - name: ckaserer.k3s_bastion
-#   version: 1.0.0
-# - name: ckaserer.k3s_haproxy
-# - name: bertvv.bind
