--- a/.ci/hosts.ini
+++ b/.ci/hosts.ini
@@ -2,4 +2,7 @@
 localhost ansible_connection=local
 
 [bastion]
-localhost ansible_connection=local
+10.0.0.1
+
+[bastion:vars]
+ansible_user=vagrant
