--- a/playbook.yml
+++ b/playbook.yml
@@ -3,14 +3,14 @@
 - name: Prepare
   hosts: bastion
   gather_facts: false
-  become: true
   tasks:
 
     - name: Install sshpass
       local_action:
         module: apt
         name: sshpass
-      run_once: True
+      become: true
+      run_once: true
 
     - name: Ensure known_hosts are set
       local_action:
@@ -18,13 +18,9 @@
         dest: ~/.ssh/known_hosts
         create: yes
         state: present
-        line: "{{ lookup('pipe', 'ssh-keyscan -t rsa '+inventory_hostname) }}"
+        line: "{{ lookup('pipe', 'ssh-keyscan -t ecdsa '+inventory_hostname) }}"
         regexp: "^{{ inventory_hostname }}"
       run_once: true
-
-- name: Known hosts
-  hosts: bastion
-  gather_facts: false
       
 - name: Bootstrap Bastion
   hosts: bastion
@@ -42,8 +38,6 @@
     - name: "Set hostname to {{ bastion_hostname }}"
       hostname:
         name: "{{ bastion_hostname }}"
-      tags:
-        - notest
 
   roles:
     - role: ckaserer.dhcpcd
@@ -51,11 +45,7 @@
         dhcpcd_interface: "{{ bastion_dhcpcd_interface }}"
         dhcpcd_ip_address: "{{ bastion_dhcpcd_ip_address }}"
         reboot: "{{ bastion_dhcpcd_reboot }}"
-      tags:
-        - notest
     - role: ckaserer.k3s_iptables
-      tags:
-        - notest
     - role: bertvv.bind
     - role: ckaserer.dhcp
     - role: ckaserer.haproxy
